@@ -1,5 +1,7 @@
 1.0.3
 - added feedback to user for single cdART copying
+- added missing.txt file - stores missing cdARTs
+- removed possible tabs in changelog.txt
 
 1.0.2
 - added logfile footprints
